--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -26,7 +26,22 @@
     <h1 class="ui header" id="header">Projects</h1>
     <br>
     <br>
-    <div class="ui two stackable linkify cards">
+    <div class="ui one stackable linkify cards">
+      {{!--Letterman  --}}
+      <div class="card" id="card">
+        <div class="image">
+          <img src="https://vojora.com/img/metatagimage.png" alt="vojora" id="vojora">
+        </div>
+        <div class="content">
+          <div class="header">Vojora - African Online Marketplace</div>
+          <div class="meta">Flutter - Node.js - MongoDB - GCP</div>
+          <div class="description">Shopping and selling platform, simple way of creating new products and chat and call securely in app. </div>
+        </div>
+        <div class="extra content">
+
+          <a href="https://vojora.com" target="_blank" rel="noopener" class={{visitbutton}}><i class="linkify icon"></i> Visit</a>
+        </div>
+      </div>
       {{!--Letterman  --}}
       <div class="card" id="card">
         <div class="image">
@@ -35,8 +50,10 @@
         <div class="content">
           <div class="header">Letterman - Digital Document Manager</div>
           <div class="meta">Ember.js - Nest.js - MongoDB - Google Vision AI</div>
-          <div class="description">Application that digitize your letters by taking an image and turning the content to
-            text through AI( Image-to-text API ) for the user to read. User can then manage them by label </div>
+          <div class="description">
+            Application that digitize your letters by taking an image and turning the content to
+            text through AI( Image-to-text API ) for the user to read. User can then manage them by label 
+          </div>
         </div>
         <div class="extra content">
 
@@ -92,7 +109,8 @@
         <div class="content">
           <div class="header">Qard - The Digital Business Card</div>
           <div class="meta">Node.js - Express - MongoDB - Ember.js</div>
-          <div class="description">Be able to save your socials and share them with a QR-Code, instead of walking around
+          <div class="description">
+            Be able to save your socials and share them with a QR-Code, instead of walking around
             with pieces of paper </div>
         </div>
         <div class="extra content">
