--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
   <h1 class="ui huge inverted header" id="nameheader">
     Hello, I'm Zubeir Mohamed
     <div class="sub header" id="subheader">
-      Software Engineering Intern at Software AG - Computer Science Student
+      Founder of Brilliance Playground - Software Engineering Intern - Computer Science Student
     </div>
   </h1>
   <a target="_blank" rel="noopener" href="mailto:zubeir.mohamed@outlook.de">
