--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -8,10 +8,9 @@
 <div class="ui content container">
   <img class="ui small left rounded floated image" src="/me.jpg" width="200px" alt="me">
   <p>
-    Hi, my name is Zubeir Mohamed I am a Computer Science student and Intern as a
-    Software Engineer at <a href="https://g.co/kgs/nkx1Y9">Software AG</a>. I
+    Hi, my name is Zubeir Mohamed I am a Computer Science student and a software engineering intern. I
     started coding {{moment-from-now "2017-08-01"}} and felt in love ever since. My goal is to impact peoples
-    life by solving real-world problems through software.
+    life by solving real-world problems through software. I founded a new startup called <a href="brillianceplayground.com">Brilliance Playground</a>.
     Go the <a href="/" id="social-links">Home</a> Page and use any social-link you like to get in contact with me. I'm
     excited to meet you!
   </p>
