--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -10,7 +10,7 @@
   <p>
     Hi, my name is Zubeir Mohamed I am a Computer Science student and a software engineering intern. I
     started coding {{moment-from-now "2017-08-01"}} and felt in love ever since. My goal is to impact peoples
-    life by solving real-world problems through software. I founded a new startup called <a href="brillianceplayground.com">Brilliance Playground</a>.
+    life by solving real-world problems through software. I founded a new startup called <a href="https://brillianceplayground.com">Brilliance Playground</a>.
     Go the <a href="/" id="social-links">Home</a> Page and use any social-link you like to get in contact with me. I'm
     excited to meet you!
   </p>
