--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -6,7 +6,7 @@
 </style>
 
 <div class="ui content container">
-  <img class="ui small left rounded floated image" src="/me.jpg" width="200px" alt="me">
+  <img class="ui small left rounded floated image" src="/me.jpeg" width="200px" alt="me" style="border-radius: 30px;">
   <p>
     Hi, my name is Zubeir Mohamed I am a Computer Science student and a software engineering intern. I
     started coding {{moment-from-now "2017-08-01"}} and felt in love ever since. My goal is to impact peoples
