--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,6 +3,8 @@
   @import url('https://fonts.googleapis.com/css?family=Staatliches&display=swap');
   @import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
   @import url('https://fonts.googleapis.com/css?family=Righteous&displays=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 
 
   body {
@@ -93,13 +95,13 @@
   }
 
   #mainheader {
-    font-family: 'Righteous', cursive;
+    font-family: 'Poiret One', cursive;
     font-size: 35px;
   }
 
   #nameheader {
     font-size: 47px;
-    font-family: 'Righteous', cursive;
+    font-family: 'Poiret One', cursive;
   }
 
   #subheader {
@@ -107,7 +109,11 @@
     font-family: 'Montserrat', sans-serif;
   }
 
-  #projectbutton {}
+  #projectbutton {
+    border-radius: 100px;
+    transition: 0.5s;
+    font-family: 'Poiret One', cursive;;
+  }
 
   #icon {
     width: 5%;
