--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,7 +12,7 @@ body {
   width: 100wh;
   height: 90vh;
   color: #fff;
-  background: linear-gradient(-45deg, #29335c, #27fb6b, #3b28cc, #05f140);
+  background: linear-gradient(-45deg, #000428,  #004e92, #000428,  #19547b);
   background-size: 400% 400%;
   -webkit-animation: Gradient 15s ease infinite;
   -moz-animation: Gradient 15s ease infinite;
